--- a/RSAKeyUtil/RSAKeyUtil.csproj
+++ b/RSAKeyUtil/RSAKeyUtil.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net47</TargetFramework>
   </PropertyGroup>
 
 </Project>
