--- a/Communication.Host/Communication.Api/appsettings.json
+++ b/Communication.Host/Communication.Api/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "Smtp": {
+    "Host": "smtp.mailsnag.com",
+    "Port": 2525,
+    "FromName": "Test",
+    "FromAddress": "test@test.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
