--- a/.gitignore
+++ b/.gitignore
@@ -286,4 +286,5 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
-Communication.Host/Communication.Api/appsettings.Development.json
+.DS_Store
+appsettings.Development.json
