Use matiltrap to send email

--- a/Communication.Api/appsettings.json
+++ b/Communication.Api/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "Smtp": {
-    "Host": "smtp.mailsnag.com",
+    "Host": "smtp.mailtrap.io",
     "Port": 2525,
     "FromName": "Test",
-    "FromAddress": "test@test.com"
+    "FromAddress": "from@example.com"
   },
   "Logging": {
     "LogLevel": {
