--- a/Communication.Api.Tests.Acceptance/Communication.Api.Tests.Acceptance.csproj
+++ b/Communication.Api.Tests.Acceptance/Communication.Api.Tests.Acceptance.csproj
@@ -20,12 +20,14 @@
     <PackageReference Include="SpecFlow" Version="3.9.8" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.8" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.8" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="SpecFlow" />
     <None Remove="SpecFlow.Tools.MsBuild.Generation" />
     <None Remove="SpecFlow.xUnit" />
+    <None Remove="FluentAssertions" />
   </ItemGroup>
   <ItemGroup>
     <None Update="SendEmail.feature">
