--- a/Communication.Api/Communication.Api.csproj
+++ b/Communication.Api/Communication.Api.csproj
@@ -30,4 +30,9 @@
     <Folder Include="Models\" />
     <Folder Include="Config\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Communication.Contracts\Communication.Contracts.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
