--- a/Communication.Api.Tests.Acceptance/Communication.Api.Tests.Acceptance.csproj
+++ b/Communication.Api.Tests.Acceptance/Communication.Api.Tests.Acceptance.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,13 +25,25 @@
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.8" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.8" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
     <None Remove="SpecFlow" />
     <None Remove="SpecFlow.Tools.MsBuild.Generation" />
     <None Remove="SpecFlow.xUnit" />
     <None Remove="FluentAssertions" />
+    <None Remove="ApiClients\" />
+    <None Remove="Microsoft.Extensions.Configuration.Binder" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Update="SendEmail.feature">
@@ -36,8 +52,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="SendEmail.feature.cs">
-      <DependentUpon>SendEmail.feature</DependentUpon>
-    </Compile>
+    <Folder Include="ApiClients\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Communication.ApiClient\Communication.ApiClient.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\SendEmail.feature">
+      <Visible>False</Visible>
+    </SpecFlowFeatureFiles>
   </ItemGroup>
 </Project>
