--- a/DocDB/DocDB/appsettings.json
+++ b/DocDB/DocDB/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "DatabaseConfiguration": {
-    "DocsDir": "./documents"
+    "DocsDir": "./documents",
+    "IndexDir": "./documents.index"
   },
   "Logging": {
     "LogLevel": {
