--- a/DocDB/DocDB/DocDB.csproj
+++ b/DocDB/DocDB/DocDB.csproj
@@ -21,6 +21,7 @@
     <None Remove="documents\" />
     <None Remove="Requests\" />
     <None Remove="Models\" />
+    <None Remove="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -29,5 +30,6 @@
     <Folder Include="documents\" />
     <Folder Include="Requests\" />
     <Folder Include="Models\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
